# AVLIT-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Applications/Demo/: CMakeLists.txt
Applications/Demo/UI/: MainWindow.ui
Applications/Demo/include/: Application.hpp  CustomOpenGLWidget.hpp  EventManager.hpp  MainWindow.hpp
Applications/Demo/src/: Application.cpp  CustomOpenGLWidget.cpp  EventManager.cpp  Main.cpp  MainWindow.cpp
Assets/Sponza/: sponza.mtl
Core/: CMakeLists.txt
Core/Base/include/: AABB.hpp  AssetManager.hpp  Camera.hpp  Drawable.hpp  Engine.hpp  Light.hpp  Macros.hpp  Material.hpp  MaterialManager.hpp  Math.hpp  Mesh.hpp  MeshManager.hpp  Model.hpp  ModelManager.hpp  Scene.hpp  SceneBVHNode.hpp  SceneObject.hpp  TextureManager.hpp  Types.hpp
Core/Base/inline/: AABB.inl  Camera.inl  Light.inl  Material.inl  Mesh.inl  Scene.inl  SceneBVHNode.inl  SceneObject.inl
Core/Base/src/: AABB.cpp  AssetManager.cpp  Camera.cpp  Drawable.cpp  Engine.cpp  Light.cpp  Material.cpp  MaterialManager.cpp  Mesh.cpp  MeshManager.cpp  Model.cpp  ModelManager.cpp  Scene.cpp  SceneBVHNode.cpp  SceneObject.cpp  TextureManager.cpp
Core/Renderer/OpenGL/GLSL/: Blur.frag  Blur.frag.glsl  Blur.vert  Blur.vert.glsl  Debug.frag.glsl  Debug.vert.glsl  DeferredLighting.frag  DeferredLighting.frag.glsl  DeferredLighting.vert  DeferredLighting.vert.glsl  GBuffer.frag  GBuffer.frag.glsl  GBuffer.vert  GBuffer.vert.glsl  Light.glsl  SSAO.frag  SSAO.frag.glsl  SSAO.vert  ShadowMapping.frag  ShadowMapping.vert  ShadowMapping.vert.glsl  Skybox.frag  Skybox.frag.glsl  Skybox.vert  Skybox.vert.glsl  Tonemapping.frag  Tonemapping.frag.glsl  Tonemapping.vert  Tonemapping.vert.glsl
Core/Renderer/OpenGL/include/: OGLFramebuffer.hpp  OGLRenderSystem.hpp  OGLShader.hpp  OGLShaderManager.hpp  OGLSkybox.hpp  OGLTexture.hpp  OGLVAO.hpp  glad.h
Core/Renderer/OpenGL/inline/: OGLFramebuffer.inl  OGLRenderSystem.inl  OGLShader.inl  OGLShaderManager.inl  OGLSkybox.inl  OGLTexture.inl  OGLVAO.inl
Core/Renderer/OpenGL/src/: OGLFramebuffer.cpp  OGLRenderSystem.cpp  OGLShader.cpp  OGLShaderManager.cpp  OGLSkybox.cpp  OGLTexture.cpp  OGLVAO.cpp  bluenoise.h  glad.c
Core/Renderer/include/: GPUBuffer.hpp  RenderSystem.hpp  RenderTarget.hpp  Shader.hpp  Texture.hpp
Dependencies/: CMakeLists.txt
